# VectorTD-AI

./: AGENTS.md  DiscreteK_ActionSpace.md  README.md  arborescence_projet.txt  conftest.py  pyproject.toml
data/maps/: dev_2lanes.json  dev_line5.json  do_the_splits.json  elemental_ish.json  no_left_turns.json  round_the_twist.json  snaking_path.json  switchback.json  the_frog.json  up_and_down.json
docs/: AI_LESSONS_LEARNED.md  CODEX_MANIFEST.md  GAMEPLAY_SPEC.md  MAP_SWITCHBACK_MARKERS_TODO.md  SB3_2_7_CHEATSHEET.md  SB3_MIGRATION_TARGET.md
graphics/masks/: offsets.json
src/vectortd/ai/: actions.py  benchmark_sb3_maskableppo.py  benchmark_throughput.py  config_loader.py  env.py  masking.py  obs.py  obs_flatten.py  rewards.py  run_metadata.py  run_summary.py  smoke_env.py  vectorized_env.py
src/vectortd/ai/action_space/: candidates.py  discrete_k.py
src/vectortd/ai/policies/: baseline.py
src/vectortd/ai/training/: evaluate.py  (+9 more)
src/vectortd/app/: run_extract_map.py  run_gui.py  run_headless.py
src/vectortd/core/: engine.py  rng.py
src/vectortd/gui/: assets.py  pyglet_app.py  ui_layout.py
src/vectortd/io/: replay.py
src/vectortd/testing/: __init__.py  definitions.py
src/vectortd/tests/: test_action_candidates.py  test_blue_towers.py  test_buffs.py  test_creep_motion.py  test_discrete_k_action_table.py  test_discrete_k_masking.py  test_discrete_k_observation.py  test_green_laser.py  test_purple3_on_up_and_down.py  test_red_rockets_round_the_twist.py  test_test_definition.py  test_wave_spawner.py
tools/: check_env_gymnasium.py  sb3_27_introspect.py
(+9 files in other folders)
