[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vectortd"
version = "0.0.1"
description = "Simplified reimplementation of VectorTD (tower defense) in Python (pyglet) with a headless engine for AI."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Charles" }]
dependencies = [
  "pyglet>=2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["src/vectortd/tests"]
addopts = "-q"
pythonpath = ["src"]
